Update navbar layout and footer button styling

--- a/index.html
+++ b/index.html
@@ -10,42 +10,58 @@
 </head>
 <body>
     <div class="top">
-<div class="nav">
+        <div class="nav">
+<div class="nav-left">
     <i class="fa-solid fa-braille"></i>
 <a href="index.html">
 <img src="/images/Snap_Inc_Logo_Fixed.svg" alt="logo" class="logo">
 </a>
+</div>
+
+<div class="nav-right">
 <a href="">NEWS</a>
 <a href="">INVESTORS</a>
 <a href="">CAREERS</a>
 </div>
+</div>
     </div>
 
     <div class="main">
-<h1>We contribute to human progress by empowering <br> people to express themselves, live in the moment,<br> learn about the world, and have fun together.</h1>
+<h1>We contribute to human progress by empowering <br> people to express themselves, live in the moment,<br>learn about the world, and have fun together.</h1>
 
 <h3>OUR PRODUCTS & SERVICES</h3>
 <div class="images">
+    <div class="img-1">
 <img src="/images/BLACK_SNAPCHAT_LOGO.svg" alt="">
-<p>Snapchat is a visual messaging service that enhances your communication with friends,family and the world.</p>
+<p>Snapchat is a visual messaging service that <br> enhances your communication with friends, <br> family and the world.</p>
+</div>
 
+<div class="img-2">
 <img src="/images/Spectacles_Black.svg" alt="">
 <p>Spectacles make computing more human.</p>
+</div>
 
+<div class="img-3">
 <img src="/images/Lens_Studio_Mobile.svg" alt="">
-<p>Lens Studio is a creative tool for developers to build cutting-edge AR & AI experiences.</p>
+<p>Lens Studio is a creative tool for developers to <br> build cutting-edge AR & AI experiences.</p>
+</div>
 </div>
 </div>
 
 <footer>
 <div class="footer-container">
+    <div class="footer-left">
 <img src="/images/Snap_Inc_Logo_Fixed.svg" alt="">
-<a href="CITIZENSNAP"></a>
-<a href="OTHER TERMS & SERVICES"></a>
-<a href="PRIVACY POLICY"></a>
-<a href="TERMS OF SERVICE"></a>
+<a href="CITIZENSNAP">CITIZENSNAP</a>
+<a href="OTHER TERMS & SERVICES">OTHER TERMS & SERVICES</a>
+<a href="PRIVACY POLICY">PRIVACY POLICY</a>
+<a href="TERMS OF SERVICE">TERMS OF SERVICE</a>
+</div>
+
+<div class="footer-right">
 <p>LANGUAGE</p>
-<b>English (US)</b>
+<button><i class="fa-solid fa-globe"></i>English (US)</button>
+</div>
 
 </div>
 </footer>
