--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>We are Snap Inc</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 <link rel="stylesheet" href="style.css">
-
+<link rel="icon" type="image/png" href="/images/favicon.svg">
 </head>
 <body>
     <div class="top">
